# Plugin

./: README.md
Example/Basic/: CMakeLists.txt  Main.qml  main.cpp
Qml/IdInputEdit/: IdInputEdit.qmltypes  qmldir
Qml/PwdInputEdit/: PwdInputEdit.qmltypes  qmldir
Src/IdInputEdit/: CMakeLists.txt  IdInputItemControls.qml  idinputitem.cpp  idinputitem.h  qmldir
Src/PwdInputEdit/: CMakeLists.txt  PwdInputEditControls.qml  pwdinputedit.cpp  pwdinputedit.h  qmldir
